--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+body {
+  width: 100%;
+  min-width: 100vw;  
+  height: auto;
+  font-family: montserrat, arial, verdana;
+  text-align: center; 
+  background: url('https://images.pexels.com/photos/5428830/pexels-photo-5428830.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat;
+  background-size: cover;
+  
+}
+
 .App {
-  text-align: center;
+  text-align: center; 
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quizContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 5px;
+  background-color: azure;
+  width: auto;   
+  max-width: 500px;
+  height: auto;
+  padding: 20px;  
+  margin: 90px auto;
+  border-radius: 20px;    
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 600px) {
+  .quizContainer {
+    width: 70%;       
+    margin: 30px auto;
+ 
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonsClass {
+  display: flex;
+  flex-direction: row;
+  margin: 15px 5px;
+  gap: 10px;
 }
+
+.buttonsClass button {
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: greenyellow;
+  transition: ease-in 0.1s;
+}
+
+.buttonsClass button:hover {
+  transform: scale(0.95);
+}
+
+.answeringBtns {
+  padding: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: ease-out 0.2s;
+}
+
+.answeringBtns:hover {
+  transform: scale(0.95)
+}
+
+.progressBar {
+  width: 200px;
+  height: 30px;
+  border: 1px solid black;
+}
+
+.buttonsForAnswer {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
