--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@ body {
   
 }
 
+html, body {
+  height: 100%; /* Ensures the body and html elements take up full height */
+  width: 100%;
+  margin: 0; /* Remove default margin */
+}
+
+
 .App {
   text-align: center; 
   width: 100%;
