--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,23 @@
 
 body {
   width: 100%;
-  min-width: 100vw;   
-  height: 100%;
+  min-width: 100vw;  
+  height: 130vh;
   font-family: montserrat, arial, verdana;
   text-align: center; 
-  background: url('https://images.pexels.com/photos/5428830/pexels-photo-5428830.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
-  background-size: cover;
+  background: rgb(131,58,180);
+  background: linear-gradient(180deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+  /* background: url('https://images.pexels.com/photos/5428830/pexels-photo-5428830.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed; */
+  background-size: cover;   
+  background-position: center center;
+  background-attachment: fixed;
   
 }
 
 html, body {
   height: 100%; 
   width: 100%;
-  margin: 0; 
-  overflow-y: hidden;
+  margin: 0;   
 }
 
 
